49
================

14/05/24 Prevent invalid queries when there is no expired media
13/05/24 Online forms: Create animal should deduplicate if code is present in name
09/05/24 Add English (Turkey) locale
09/05/24 Fix bug with mailing label PDF and unicode chars in the filename
08/05/24 Only complete the incomplete diary notes on animal death, instead of all
07/05/24 Reports: cope with being given a negative number for rounding digits
07/05/24 ClinicTypeDescription field mispelled as ClinicTypeDescripton in new dbs
06/05/24 Query builder: animal queries can include test and vacc dates
06/05/24 Query builder: On shelter at date/between two dates criteria
02/05/24 Fix for copy/move media dialog not appearing immediately after attach
01/05/24 Show "Animal Name" in waiting list table header instead of ambiguous Name

48
================

26/04/24 onlineform/create_animal should set default breed/type/species/size/colour
26/04/24 Add vet field to vouchers #1464
26/04/24 Include hold ends and transports in timeline #1465
24/04/24 Set new waiting list fields from online forms #656
24/04/24 Waiting list dispositions (removal category) #874
24/04/24 Extra waiting list animal fields #656
23/04/24 Format dates to locale when outputting columns for Excel
21/04/24 Add sponsor flag to recalculate person flags batch process
17/04/24 Move non-shelter animals who die during boarding off shelter
17/04/24 Add json/xml_adopted_animals service calls
14/04/24 Update all English translations, fix bug with missing form name
13/04/24 Add html/json/xml_stray_animals service calls
13/04/24 Email templates not loading on reservation book
12/04/24 Prevent screen reloading when processing any incoming forms
12/04/24 adoptable_js: choosing a filter breaks iframes
11/04/24 If there are no breeds, show a blank instead of species name
11/04/24 Throw an error when a template does not exist instead of animalview
11/04/24 When viewing diary notes from the calendar choose the right filter