@@ -971,7 +971,12 @@ $(function() {
                 '<option value="{ownerforenames} {ownersurname}">' + _("First Last") + '</option>',
                 '<option value="{ownersurname}, {ownerforenames}">' + _("Last, First") + '</option>',
                 '<option value="{ownersurname} {ownerforenames}">' + _("Last First") + '</option>',
-                '</select><br />',
+                '</select> ',
+                '<select data="OwnerNameMarriedFormat" id="ownernamemarriedformat" type="text" class="asm-selectbox">',
+                '<option value="{ownerforenames1} & {ownerforenames2} {ownersurname}">' + _("First & First Last") + '</option>',
+                '<option value="{ownersurname}, {ownerforenames1} & {ownerforenames2}">' + _("Last, First & First") + '</option>',
+                '</select> ',
+                '<br />',
                 '<label for="ownernameformat" style="margin-left: 24px">' + _("When displaying calendars, the first day of the week is") + '</label> ',
                 '<select data="FirstDayOfWeek" id="firstdayofweek" type="text" class="asm-selectbox">',
                 '<option value="0">' + _("Sunday") + '</option>',
